# lifesim

./: .gitignore  CHANGELOG.md  Makefile  README.md  meson.build
.github/workflows/: c-cpp.yml
src/: config.def.h  game_of_life.c  game_of_life.h  main.c
